fix scrollbar child issue, sorted the nodes by weights of relattions

--- a/src/app/main/apps/noctua-form/cam/cam-table/activity-tree/activity-tree.component.scss
+++ b/src/app/main/apps/noctua-form/cam/cam-table/activity-tree/activity-tree.component.scss
@@ -242,7 +242,7 @@ $accent: map-get($theme, accent);
 
   .noc-tree-container {
     position: relative;
-    padding-left: 30px;
+    padding-left: 29px;
     padding-right: 10px;
     .noc-cell-label {
       position: relative;
